--- a/src/ListOfRepertoires/ListOfRepertoires.css
+++ b/src/ListOfRepertoires/ListOfRepertoires.css
@@ -1,10 +1,14 @@
 #container{
     display: flex;
-    width: 90%;
+    width: 100%;
     height: 100%;
     align-items: center;
     background-color: rgb(20, 20,20);
     flex-direction: column;
+}
+
+.div-wraper{
+    width: 90%;
 }
 
 #dateForm{
