--- a/src/Reservation/Reservation.css
+++ b/src/Reservation/Reservation.css
@@ -20,3 +20,15 @@
   flex-direction: column;
 }
 
+.close-button {
+  font-size: 1.2rem;
+  background-color: transparent;
+  color: white;
+  border: 2px solid #e7e7e7;
+  margin: 2rem;
+}
+
+.close-button:hover {
+  color: black;
+  background-color: #e7e7e7;
+}
