--- a/src/Reservation/Reservation.css
+++ b/src/Reservation/Reservation.css
@@ -2,33 +2,56 @@
   font-size: 1.8rem;
   color: white;
   text-align: center;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
 }
 
 .h2 {
   font-size: 1.2rem;
   color: white;
   text-align: center;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
 }
 
 .reservationContainer{
-  background-color: rgba(90,90,90, 0.9);
+  width: 90%;
+  min-height: 100vh;
+  background-color: rgba(90,90,90, 1);
   display: flex;
-  width: 100%;
   align-items: center;
   flex-direction: column;
 }
 
 .close-button {
+  padding: 0.4rem;
   font-size: 1.2rem;
   background-color: transparent;
-  color: white;
   border: 2px solid #e7e7e7;
-  margin: 2rem;
+  margin: 1rem;
+  float: left;
+  
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
 }
 
-.close-button:hover {
+.link-button{
+  text-decoration: none;
+  color: white;
+}
+
+.close-button:hover .link-button{
   color: black;
+}
+
+.close-button:hover{
   background-color: #e7e7e7;
+}
+
+.alert{
+  padding: 0.3rem;
+  background-color: #f44336;
+  color: white;
+  margin: 0.5rem;
 }
