--- a/src/Seats/Seats.css
+++ b/src/Seats/Seats.css
@@ -3,6 +3,12 @@
   width: 90%;
   align-items: center;
   flex-direction: column;
+  
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
 }
 
 .seatsTable{
