--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -1,5 +1,5 @@
 .home h1 {
-  font-size: 38px;
+  font-size: 32px;
   text-align: center;
   letter-spacing: 2px;
   margin-bottom: 10px;
@@ -11,5 +11,40 @@
   text-align: center;
   letter-spacing: 2px;
   margin-top: 10px;
+  margin-bottom: 100px;
   font-family: 'Notable', sans-serif;
+}
+
+.home h3 {
+  font-size: 28px;
+}
+
+.popular-box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.movie-item {
+  width: calc(100% / 4 - 16px);
+  cursor: pointer;
+  position: relative;
+  margin-bottom: 16px;
+}
+
+img {
+  object-fit: cover;
+  max-width: 100%;
+}
+
+.footer {
+  margin-top: 50px;
+}
+
+.footer > p {
+  text-align: center;
+  font-size: 12px;
+  margin: 0;
+  color: #999;
+  padding: 15px 0;
 }
