Aktualizacja styli repertuarów Wyłączenie możliwości rezerwacji dla godzin wcześniejszych od aktualnej

--- a/src/ListOfRepertoires/ListOfRepertoires.css
+++ b/src/ListOfRepertoires/ListOfRepertoires.css
@@ -16,6 +16,7 @@
     align-items: center;
     background-color: rgb(20, 20,20);
     flex-direction: column;
+    padding-bottom: 50px;
 }
 
 .div-wraper{
