--- a/src/Repertoire/Repertoire.css
+++ b/src/Repertoire/Repertoire.css
@@ -5,6 +5,7 @@
     margin-bottom: 5px;
     flex-wrap: wrap;
     transition: all 0.3s ease-in;
+    padding-left: 30px;
 }
 .single:hover{
     background-color: rgba(50,50,50,0.9);
@@ -28,10 +29,11 @@
     display: flex;
     width: 10%;
     min-width: 75px;
-    height: 100px;
+    height: 120px;
     padding: 5px;
     margin: 10px;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 #movieTitle{
     color: white;
@@ -80,6 +82,6 @@ p{
 }
 .hourOpened:hover{
     color: black;
-    transform: scale(1.3);
+    transform: scale(1.05);
     font-weight: bold;
 }
