--- a/src/FilmComments/FilmComment.css
+++ b/src/FilmComments/FilmComment.css
@@ -1,12 +1,22 @@
 .avatar img{
-    height: 100%;
-    width: auto;
+    width: 40px;
+    height: 40px;
     text-align: center;
-    padding: 5px;
+    object-fit: cover;
+    align-items: center;
 }
 
+
 .comment{
-    height:70px;
+    /* height:70px; */
+    padding: 4px;
     display: flex;
     margin: 10px;
+    border: 1px solid white;
+}
+
+.container{
+    border: 1px solid white;
+    padding: 5px;
+    display: flex;
 }
