--- a/src/MovieDetails/MovieDetails.css
+++ b/src/MovieDetails/MovieDetails.css
@@ -1,7 +1,7 @@
 .info{
-    display: flex;
+    /* display: flex; */
     width: 100%;
-    height: 200px;
+    height: auto;
     background-color: rgba(10,10,10, 0.8);
     color: aliceblue;
 }
